Build out markup for and style contact page;  Style separators for quarter rows;  Animate hover states for contact modules;

--- a/templates/approach/index.html
+++ b/templates/approach/index.html
@@ -7,7 +7,7 @@
   {% for pageHeader in entry.pageHeader.all() %}
     <div class="checkerboard-header">
       <div class="row -halves">
-        <div class="row-block pull-h1-to-top">
+        <div class="row-block pull-to-top-h1">
           <div class="module text-module background-white text-black">
             <p class="font-h1">{{ pageHeader.subheader }}</p>
             <div class="buttons show-md">
