--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   {% for pageHeader in entry.pageHeader.all() %}
     <div class="checkerboard-header theater-wrap -closed">
       <div class="row -halves theater-cover-top">
-        <div class="row-block pull-h1-to-top">
+        <div class="row-block pull-to-top-h1">
           <div class="module text-module background-white text-black">
             <p class="font-h1 no-margin">{{ pageHeader.subheader }}</p>
             <div class="buttons show-md">
