--- a/templates/index.html
+++ b/templates/index.html
@@ -2,44 +2,9 @@
 
 {% block content %}
 
-  <!-- checkerboard header w/ theater -->
+
   {% for pageHeader in entry.pageHeader.all() %}
-    <div class="checkerboard-header theater-wrap -closed">
-      <div class="row -halves theater-cover-top">
-        <div class="row-block pull-to-top-h1">
-          <div class="module text-module background-white text-black">
-            <p class="font-h1 no-margin">{{ pageHeader.subheader }}</p>
-            <div class="buttons show-md">
-              {% if pageHeader.headerVideo %}
-                <button class="button theater-open">
-                  <span class="border"></span><span class="extra-corners"></span>
-                  Play Video
-                  <svg class="icon icon-triangle"><use xlink:href="#icon-triangle" /></svg>
-                </button>
-              {% endif %}
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="checkerboard-hero theater image-wrap">
-        {% set headerImage = pageHeader.headerImage.one() %}
-        {% if headerImage %}
-            <div class="theater-mask image lazy" style="background-image: url();" data-original="{{ headerImage.getUrl('header') }}"></div>
-        {% endif %}
-        {% if pageHeader.headerVideo %}
-          <div class="video fluid-width-video-wrapper fill">
-            <div id="youtube-player" data-youtube-id="{{ pageHeader.headerVideo }}"></div>
-          </div>
-        {% endif %}
-      </div>
-      <div class="row -halves theater-cover-bottom">
-        <div class="row-block -right">
-          <div class="text-module background-black text-off-white font-smoothing">
-            <div class="user-content">{{ pageHeader.supportingStatement }}</div>
-          </div>
-        </div>
-      </div>
-    </div>
+    {% include '/partials/_theater-header' %}
   {% endfor %}
 
 
