--- a/templates/partials/media-blocks/_stat.html
+++ b/templates/partials/media-blocks/_stat.html
@@ -1,11 +1,13 @@
 {% if block.figure2 %}
 
   <article class="module stat-two-figure-module">
-    <div class="figure figure-1">
-        {{ block.figure }}<span class="label">{{ block.label }}</span>
-    </div>
-    <div class="figure figure-2">
-        {{ block.figure2 }}<span class="label">{{ block.label2 }}</span>
+    <div class="slash-wrap">
+      <div class="figure figure-1">
+          {{ block.figure }}<span class="label">{{ block.label }}</span>
+      </div>
+      <div class="figure figure-2">
+          {{ block.figure2 }}<span class="label">{{ block.label2 }}</span>
+      </div>
     </div>
   </article>
 
