--- a/templates/partials/media-blocks/_quotes.html
+++ b/templates/partials/media-blocks/_quotes.html
@@ -1,12 +1,15 @@
 <div class="module quotes-module pad">
   <div class="quote-carousel -unslicked">
-    {% for row in block.quotes %}
+    {% for row in block.quotes.all() %}
       <blockquote class="no-margin">
         "{{ row.quote }}"
-        {% if row.author or row.company %}
-          <footer>— <cite>{{ row.author }}{{ row.author and row.company ? ', ' : '' }}{{ row.company }}</cite></footer> 
+        {% set person = row.aeiPerson.one() %}
+        {% if person %}
+          <footer>— <cite><a href="{{ person.getUrl() }}">{{ person.title }}</a>{% if row.personCompany %}, {{ row.personCompany }}{% endif %}</cite></footer>
+        {% elseif row.personName or row.personCompany %}
+          <footer>— <cite>{{ row.personName }}{{ row.personName and row.personCompany ? ', ' : '' }}{{ row.personCompany }}</cite></footer>
         {% endif %}
       </blockquote>
     {% endfor %}
   </div>
-</div>  
+</div>
