--- a/templates/people/_entry.html
+++ b/templates/people/_entry.html
@@ -13,15 +13,28 @@
 {% endblock %}
 
 {% block content %}
-  {{ entry.title }}
+  <h1>{{ entry.title }}</h1>
 
   {% if entry.personQuote %}
     <blockquote><p>{{ entry.personQuote }}</p></blockquote>
   {% endif %}
 
   <h3>{{ entry.title }}’s Recent Projects</h3>
-  ...
+  {% set relatedEntries = craft.entries.section('projects').relatedTo({
+     targetElement: entry,
+     field: 'projectLeaders.aeiPerson',
+  }).all() %}
+  {% for relatedEntry in relatedEntries %}
+    <li><a href="{{ relatedEntry.getUrl() }}">{{ relatedEntry.title }}</a></li>
+  {% endfor %}
+
   <h3>{{ entry.title }}’s Recent Impact</h3>
-  ...
+  {% set relatedEntries = craft.entries.section('impact').relatedTo({
+     targetElement: entry,
+     field: 'impactPeople.aeiPerson',
+  }).all() %}
+  {% for relatedEntry in relatedEntries %}
+    <li><a href="{{ relatedEntry.getUrl() }}">{{ relatedEntry.title }}</a></li>
+  {% endfor %}
 
 {% endblock %}
