add page titles to templates

--- a/templates/awards/index.html
+++ b/templates/awards/index.html
@@ -1,5 +1,5 @@
 {% extends (craft.app.request.isAjax and not craft.request.isLivePreview) ? "_ajax-layout" : "_layout" %}
-
+{% set title = 'Awards' %}
 {% set bodyClass = 'white-header' %}
 
 {% block content %}
