--- a/templates/contact/index.html
+++ b/templates/contact/index.html
@@ -1,5 +1,5 @@
 {% extends (craft.app.request.isAjax and not craft.request.isLivePreview) ? "_ajax-layout" : "_layout" %}
-
+{% set title = entry.title %}
 {% set bodyClass = 'white-header' %}
 
 {% block content %}
