--- a/templates/expertise/index.html
+++ b/templates/expertise/index.html
@@ -12,6 +12,7 @@
     ]
   }).limit(8) as paginationInfo, projectEntries %}
 
+  {% set title = category.title %}
   {% set subheader = category.description %}
 
 {% else %}
@@ -25,6 +26,7 @@
     ]
   }).limit(8) as paginationInfo, projectEntries %}
 
+  {% set title = entry.title %}
   {% set subheader = entry.description %}
 
 {% endif %}
