--- a/templates/approach/_service.html
+++ b/templates/approach/_service.html
@@ -1,5 +1,5 @@
 {% extends (craft.app.request.isAjax and not craft.request.isLivePreview) ? "_ajax-layout" : "_layout" %}
-{% set title = entry.title %}
+{% set title = category.title %}
 {% set bodyClass = 'overlapping-header' %}
 
 {% block content %}
