--- a/web/assets/scss/components/_media-blocks.scss
+++ b/web/assets/scss/components/_media-blocks.scss
@@ -150,7 +150,7 @@
 }
 
 // Image
-.image-module {
+.image-module, .video-module {
   @include clearfix;
   @include max-screen($breakpoint-md - 1px) {
     margin-top: $padding;
@@ -207,21 +207,6 @@
   }
 }
 
-.text-module, .user-content {
-
-  p:not(:last-child) {
-    margin-bottom: 1.45em;
-  }
-
-  > :first-child {
-    margin-top: 0;
-  }
-
-  > :last-child {
-    margin-bottom: 0;
-  }
-}
-
 .quote-carousel {
   &.-unslicked {
     blockquote {
@@ -229,6 +214,54 @@
       &:first-child {
         display: block;
       }
+    }
+  }
+}
+
+
+
+.theater-wrap {
+
+  .player-wrap {
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transition: opacity 0.3s;
+  }
+
+  .theater-close {
+    top: 0;
+    right: 0;
+    z-index: 2;
+    opacity: 0;
+    fill: $black;
+    position: absolute;
+    padding: $padding/2;
+
+    &:hover {
+      fill: $white;
+    }
+
+    .icon {
+      width: 16px;
+      height: 16px;
+    }
+  }
+
+  &.-open {
+
+    .player-wrap.player-ready {
+      opacity: 1;
+      transition: opacity 0.2s 0.3s $ease;
+    }
+
+    .theater-close {
+      opacity: 1;
+      cursor: pointer;
+      transition: opacity 0.2s 0.3s $ease;
     }
   }
 }
