--- a/web/assets/scss/main.scss
+++ b/web/assets/scss/main.scss
@@ -34,9 +34,9 @@
 @import "components/articles";
 @import "components/entry-navigation";
 @import "components/meta";
+@import "components/user-content";
 
 // Pages
-
 @import "pages/impact";
 @import "pages/expertise";
 @import "pages/awards";
