--- a/templates/partials/_theater-header.html
+++ b/templates/partials/_theater-header.html
@@ -1,3 +1,10 @@
+{% if pageHeader.headerVideo %}
+  {% set ytregex1 = '/^(?:https?:\\/\\/)?(?:www\.)?(?:youtu\.be\\/|youtube\.com)(?:\\/embed\\/|\\/v\\/|\\/watch\\?v=||\\/watch\\\?.+&v=)/' %}
+  {% set ytregexTrailingSlash = '/(\\/)$/' %}
+  {% set ytregexTrailingVariables = '/(&+.*)/' %}
+  {% set youtubeid = pageHeader.headerVideo | replace(ytregex1, '') | replace(ytregexTrailingSlash, '') | replace(ytregexTrailingVariables, '') %}
+{% endif %}
+
 <!-- checkerboard header w/ optional theater -->
 <div class="checkerboard-header theater-wrap -closed">
   <div class="row -halves theater-cover-top">
@@ -38,11 +45,12 @@
   <div class="checkerboard-hero theater image-wrap">
     {% set headerImage = pageHeader.headerImage.one() %}
     {% if headerImage %}
-        <div class="theater-mask image lazy" style="background-image: url();" data-original="{{ headerImage.getUrl('header') }}"></div>
+        <div class="image lazy" style="background-image: url();" data-original="{{ headerImage.getUrl('header') }}"></div>
     {% endif %}
     {% if pageHeader.headerVideo %}
-      <div class="video fluid-width-video-wrapper fill">
-        <div id="youtube-player" data-youtube-id="{{ pageHeader.headerVideo }}"></div>
+      <div class="player-wrap fluid-width-video-wrapper fill">
+        <div class="player" data-youtube-id="{{ youtubeid }}"></div>
+        <div class="theater-close"><svg class="icon icon-x"><use xlink:href="#icon-x" /></svg></div>
       </div>
     {% endif %}
   </div>
